<resources>
    <string name="app_name">Cocktail Remote</string>

    <string name="title_activity_cocktail">Cocktail Details</string>
    <string name="title_activity_edit">Edit Cocktail</string>

    <string name="cocktail_image">Picture of the cocktail</string>
    <string name="image_not_found">Image not found.</string>

    <string name="cocktail_name">Cocktail name</string>
    <string name="unnamed_cocktail">Unnamed cocktail</string>

    <string name="cocktail_description">Cocktail description</string>
    <string name="no_description">No description added yet.</string>

    <string name="ingredients">Ingredients</string>
    <string name="no_ingredients">No ingredients added yet.</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="unnamed_ingredient">Unnamed ingredient</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>

    <string name="permission_needed">Permission needed to pick cocktail image.</string>

    <string name="bluetooth_signal">Bluetooth signal</string>
    <string name="binary">Binary</string>
    <string name="integer">Integer</string>
    <string name="string">String</string>
    <string name="no_bluetooth_signal">No bluetooth signal added yet.</string>

    <string name="password_change_hint">You can change the password in the app settings.</string>

    <string name="bluetooth_connection_failure">Unable to connect to bluetooth.</string>
    <string name="bluetooth_close_failure">Unable to close bluetooth connection.</string>
    <string name="title_activity_bluetooth_device_picker">Bluetooth Device Picker</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="password_protection">Password Protection</string>
    <string name="lock_edit">Lock editing</string>

    <string name="password">Password</string>
    <string name="password_summary">Used all over the app. Click to change it. Leave it empty to remove it.</string>

    <string name="password_validation">Password required</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="invalid_password">Invalid password</string>
</resources>
