<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
>

    <TextView
            android:text="@string/password_validation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_validation_title" app:layout_constraintStart_toStartOf="@+id/password_input"
            app:layout_constraintEnd_toEndOf="@+id/password_input"
            android:textStyle="bold" android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginTop="16dp"/>
    <EditText
            app:layout_constraintWidth_percent="0.9"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_input"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:importantForAutofill="no"
            tools:text="@string/password"
            tools:ignore="LabelFor"
            android:hint="@string/password" app:layout_constraintTop_toBottomOf="@+id/password_validation_title"
            android:layout_marginTop="12dp"/>
    <TextView
            android:text="@string/invalid_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/invalid_password" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="@+id/password_input"
            app:layout_constraintEnd_toEndOf="@+id/password_input" android:textColor="@android:color/holo_red_light"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" android:visibility="gone" tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>