<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            tools:showIn="@layout/activity_edit"
            tools:context=".EditActivity"
    >
        <com.stubit.cocktailremote.views.CocktailImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cocktail_image"
                android:scaleType="center"
                android:maxHeight="150sp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cocktail_image"
                android:layout_marginTop="48dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic[19]"
        />
        <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cocktail_name"
                android:textColor="@android:color/white"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"
                android:text="@string/cocktail_name"
        />
        <EditText
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_name"
                app:layout_constraintStart_toStartOf="@+id/cocktail_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cocktail_name_input"
                android:textColor="@android:color/white"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
        />
        <TextView
                app:layout_constraintStart_toStartOf="@+id/cocktail_name"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_name"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cocktail_description"
                android:textColor="@android:color/white"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/cocktail_description"
        />
        <EditText
                app:layout_constraintTop_toBottomOf="@+id/cocktail_description"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_description"
                app:layout_constraintStart_toStartOf="@+id/cocktail_description"
                app:backgroundTint="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cocktail_description_input"
                android:textColor="@android:color/white"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
        />
        <TextView
                app:layout_constraintStart_toStartOf="@+id/cocktail_description"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_description_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:id="@+id/ingredients_title"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@+id/add_ingredient_button" android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>
        <Button
                android:text="@string/add_ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_ingredient_button"
                android:background="@android:color/transparent" android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_description_input"
                app:layout_constraintTop_toTopOf="@+id/ingredients_title"
                app:layout_constraintBottom_toBottomOf="@+id/ingredients_title" android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>
        <com.stubit.cocktailremote.views.IngredientListView
                app:layout_constraintStart_toStartOf="@+id/ingredients_title"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_description_input"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ingredient_list" app:layout_constraintTop_toBottomOf="@+id/ingredients_title"
                android:layout_marginTop="24dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="64dp" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0">
        </com.stubit.cocktailremote.views.IngredientListView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
