<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_cocktail"
        tools:context=".CocktailActivity" android:background="@color/colorPrimaryLight"
>
    <com.stubit.cocktailremote.views.CocktailImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic[19]"
            android:id="@+id/cocktail_image"
            android:scaleType="center"
            android:maxHeight="150sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cocktail_image"
    />
    <com.stubit.cocktailremote.views.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cocktail_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cocktail_image"
            android:textColor="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp" tools:text="Cocktail Name"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:textStyle="bold"/>
    <com.stubit.cocktailremote.views.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cocktail_description" app:layout_constraintStart_toStartOf="@+id/cocktail_name"
            app:layout_constraintTop_toBottomOf="@+id/cocktail_name"
            android:layout_marginTop="8dp" tools:text="Cocktail Description" android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/cocktail_name"/>
    <com.stubit.cocktailremote.views.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/cocktail_description"
            app:layout_constraintEnd_toEndOf="@+id/cocktail_description" android:text="@string/ingredients"
            android:textColor="@android:color/white" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/cocktail_description" android:layout_marginTop="32dp"
            android:id="@+id/textView" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginTop="8dp">
        <com.stubit.cocktailremote.views.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/noIncredients"
                android:textColor="@android:color/white" android:text="@string/no_ingredients"
                android:textStyle="italic"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>